@@ -1,7 +1,7 @@
 lib_LTLIBRARIES = libvoikko.la
 libvoikko_la_SOURCES = voikko_suggest.c voikko_utils.c voikko_setup.c voikko_spell.c \
                        voikko_hyphenate.c voikko_charset.c porting.c \
-                       voikko_tokenize.c sentence.c grammar.c
+                       voikko_tokenize.c sentence.c grammar.c gccache.c
 libvoikko_la_LDFLAGS = -lmalaga -no-undefined -version-info 8:0:7 @LIBLDFLAGSWIN@
 bin_PROGRAMS = voikkospell voikkohyphenate voikkogc
 voikkospell_SOURCES = voikkospell.c porting.c
@@ -17,7 +17,8 @@ voikkogc_LDADD = libvoikko.la
 
 pkginclude_HEADERS = voikko.h
 noinst_HEADERS = voikko_utils.h voikko_setup.h voikko_spell.h voikko_charset.h \
-                 voikko_hyphenate.h voikko_defs.h porting.h voikko_suggest.h
+                 voikko_hyphenate.h voikko_defs.h porting.h voikko_suggest.h \
+                 gccache.h
 
 dist_man_MANS = voikkospell.1 voikkohyphenate.1 voikkogc.1
 
