@@ -139,6 +139,7 @@ const char * voikko_init_with_path(int * handle, const char * langcode,
 	voikko_options.encoding = "UTF-8";
 	voikko_options.cache_size = cache_size;
 	voikko_options.suggestion_type = ST_STD;
+	init_gc_cache(&voikko_options.gc_cache);
 	
 	project = malloc(1024);
 	if (project == 0) return "Out of memory";
